build/testuserdir/var/cache/index/s1/errors/1/vendor/phpunit/phpunit/tests/TextUI/defaulttestsuite.phpt.warn
WARNING:12:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:12:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'by'
WARNING:12:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Sebastian'
WARNING:12:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Bergmann'
WARNING:15:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Bar'
WARNING:15:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'equals'
WARNING:15:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'bar'
WARNING:16:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	End of File
